# program-extractor

./: .gitignore  Makefile  dbt_project.yml  pyproject.toml
macros/: export_to_json.sql  extract_email_domain.sql  macros.yml
models/: sources.yml
models/marts/: dim_categorie.sql  dim_company.sql  dim_format.sql  dim_talks.sql  schema.yml
models/staging/conference-hall/: schema.yml  stg_categorie.sql  stg_format.sql  stg_speaker.sql  stg_talk.sql
